# voice-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: f703a8144e79_initial_schema.py
config/payors/: _template.yaml
docs/: ARCHITECTURE.md  CONVENTIONS.md  CREDENTIALS.md  GETTING_STARTED.md  PROJECT_REVIEW_AND_PLAN.md  RCM_VOICE_AGENTS.md  REMAINING_WORK.md  STT_FEATURES.md  TEST_PERSONA.md  TIER1_FEATURES.md
scripts/: db_setup.sh  live_call.py  run_simulator_e2e.py  telephony_hello_world.py
simulator/: __init__.py  scenarios.py  server.py
src/voice_agent/: __init__.py  events.py  logging.py  metrics.py  models.py  runner.py  session.py
src/voice_agent/audio/: __init__.py  codec.py  hold.py  pipeline.py  transfer.py  vad.py
src/voice_agent/brain/: __init__.py  claude.py  gemini.py
src/voice_agent/compliance/: __init__.py  audit.py  phi.py
src/voice_agent/db/: __init__.py  engine.py  repository.py  tables.py
src/voice_agent/extraction/: __init__.py  llm.py  patterns.py
src/voice_agent/ivr/: __init__.py
src/voice_agent/monitoring/: __init__.py
src/voice_agent/queue/: __init__.py
src/voice_agent/scripts/: __init__.py  auth_status.py  claim_status.py  eligibility.py  fax_lookup.py
src/voice_agent/stt/: __init__.py  granite.py  whisper.py
tests/: test_audio.py  test_brain_gemini.py  test_disposition.py  test_e2e.py  test_extraction.py  test_ivr.py  test_phi.py  test_queue.py  test_session.py  test_simulator.py  test_stt_granite.py  test_twilio_backend.py
(+5 files in other folders)
